@@ -1,11 +1,12 @@
 Package: rgexf
 Type: Package
-Title: An R library to build GEXF network files
+Title: An R library to build GEXF graph files
 Version: 0.13.01
 Date: 2013-01-04
-Author: George Vega Yon <george.vega@nodoschile.org>, Jorge Fabrega Lacoa <jorge.fabrega@nodoschile.org>
+Author: George Vega Yon <george.vega@nodoschile.org> [aut], Jorge Fabrega Lacoa <jorge.fabrega@nodoschile.org> [ctb]
 Maintainer: George Vega Yon <george.vega@nodoschile.org>
-Description: The first R library to create GEXF graph files. Using XML library, it allows the user to easely build/read graph files including attributes, GEXF viz attributes (such as color, size, and position), network dynamics (edges and nodes) and edges weighting.
+Description: The first R library to work with GEXF graph files. Using XML library, it allows the user to easily build/read graph files including attributes, GEXF viz attributes (such as colour, size, and position), network dynamics (edges and nodes) and edges weighting.
+URL: http://bitbucket.org/gvegayon/rgexf, http://www.nodoschile.org
 Depends: XML
 License: GPL (>= 3)
 LazyLoad: yes
